# trackcoin

./: README.md  pyproject.toml
app/: dataset.py  generation.py  main.py  rag_pipeline.py  retrieval.py
